--- a/AsignaturasLicenciatura.bib
+++ b/AsignaturasLicenciatura.bib
@@ -1,4 +1,4 @@
-@misc{Martinez2026_Desarrollo_aplicaciones_moviles,
+@unpublished{Martinez2026_Desarrollo_aplicaciones_moviles,
   title     = {Desarrollo de Aplicaciones Móviles},
   author    = {Martinez, Luis},
   year      = {2026},
@@ -6,7 +6,7 @@
   comment   = {UPV ene-abr 26}
 }
 
-@misc{Martinez2026_Sistemas_inteligentes,
+@unpublished{Martinez2026_Sistemas_inteligentes,
   title     = {Sistemas Inteligentes},
   author    = {Martinez, Luis},
   year      = {2026},
@@ -14,7 +14,7 @@
   comment   = {UPV ene-abr 26}
 }
 
-@misc{Martinez2025_Desarrollo_aplicaciones_moviles,
+@unpublished{Martinez2025_Desarrollo_aplicaciones_moviles,
   title     = {Desarrollo de Aplicaciones Móviles},
   author    = {Martinez, Luis},
   year      = {2025},
@@ -22,7 +22,7 @@
   comment   = {UPV sep-dic 25}
 }
 
-@misc{Martinez2025_Proyecto_integrador,
+@unpublished{Martinez2025_Proyecto_integrador,
   title     = {Proyecto Integrador I},
   author    = {Martinez, Luis},
   year      = {2025},
@@ -30,7 +30,7 @@
   comment   = {UPV may-ago 25}
 }
 
-@misc{Martinez2025_Programacion_movil,
+@unpublished{Martinez2025_Programacion_movil,
   title     = {Programación Móvil},
   author    = {Martinez, Luis},
   year      = {2025},
@@ -38,7 +38,7 @@
   comment   = {UPV may-ago 25}
 }
 
-@misc{Martinez2025_Sistemas_inteligentes,
+@unpublished{Martinez2025_Sistemas_inteligentes,
   title     = {Sistemas Inteligentes},
   author    = {Martinez, Luis},
   year      = {2025},
@@ -46,7 +46,7 @@
   comment   = {UPV ene-abr 25}
 }
 
-@misc{Martinez2024_Programacion_movil,
+@unpublished{Martinez2024_Programacion_movil,
   title     = {Programación Móvil},
   author    = {Martinez, Luis},
   year      = {2024},
@@ -54,7 +54,7 @@
   comment   = {UPV sep-dic 24}
 }
 
-@misc{Martinez2024_Sistemas_inteligentes,
+@unpublished{Martinez2024_Sistemas_inteligentes,
   title     = {Sistemas Inteligentes},
   author    = {Martinez, Luis},
   year      = {2024},
@@ -62,7 +62,7 @@
   comment   = {UPV may-ago 24}
 }
 
-@misc{Martinez2024_Programacion_orientada_objetos,
+@unpublished{Martinez2024_Programacion_orientada_objetos,
   title     = {Programación Orientada a Objetos},
   author    = {Martinez, Luis},
   year      = {2024},
@@ -70,7 +70,7 @@
   comment   = {UPV may-ago 24}
 }
 
-@misc{Martinez2024_Programacion_movil_ene_abr,
+@unpublished{Martinez2024_Programacion_movil_ene_abr,
   title     = {Programación Móvil},
   author    = {Martinez, Luis},
   year      = {2024},
@@ -78,7 +78,7 @@
   comment   = {UPV ene-abr 24}
 }
 
-@misc{Martinez2024_Lenguajes_automata,
+@unpublished{Martinez2024_Lenguajes_automata,
   title     = {Lenguajes y Autómatas},
   author    = {Martinez, Luis},
   year      = {2024},
@@ -86,7 +86,7 @@
   comment   = {UPV ene-abr 24}
 }
 
-@misc{Martinez2023_Programacion_movil,
+@unpublished{Martinez2023_Programacion_movil,
   title     = {Programación Móvil},
   author    = {Martinez, Luis},
   year      = {2023},
@@ -94,7 +94,7 @@
   comment   = {UPV sep-dic 23}
 }
 
-@misc{Martinez2023_Fundamentos_programacion_objetos,
+@unpublished{Martinez2023_Fundamentos_programacion_objetos,
   title     = {Fundamentos de Programación Orientada a Objetos},
   author    = {Martinez, Luis},
   year      = {2023},
@@ -102,7 +102,7 @@
   comment   = {UPV may-ago 23}
 }
 
-@misc{Martinez2023_Sistemas_inteligentes,
+@unpublished{Martinez2023_Sistemas_inteligentes,
   title     = {Sistemas Inteligentes},
   author    = {Martinez, Luis},
   year      = {2023},
@@ -110,7 +110,7 @@
   comment   = {UPV may-ago 23}
 }
 
-@misc{Martinez2023_Lenguajes_automata,
+@unpublished{Martinez2023_Lenguajes_automata,
   title     = {Lenguajes y Autómatas},
   author    = {Martinez, Luis},
   year      = {2023},
@@ -118,7 +118,7 @@
   comment   = {UPV ene-abr 23}
 }
 
-@misc{Martinez2022_Programacion_orientada_objetos,
+@unpublished{Martinez2022_Programacion_orientada_objetos,
   title     = {Programación Orientada a Objetos},
   author    = {Martinez, Luis},
   year      = {2022},
@@ -126,7 +126,7 @@
   comment   = {UPV sep-dic 22}
 }
 
-@misc{Martinez2022_Programacion_movil_sep_dic,
+@unpublished{Martinez2022_Programacion_movil_sep_dic,
   title     = {Programación Móvil},
   author    = {Martinez, Luis},
   year      = {2022},
@@ -134,7 +134,7 @@
   comment   = {UPV sep-dic 22}
 }
 
-@misc{Martinez2022_Programacion_movil_may_ago,
+@unpublished{Martinez2022_Programacion_movil_may_ago,
   title     = {Programación Móvil},
   author    = {Martinez, Luis},
   year      = {2022},
@@ -142,7 +142,7 @@
   comment   = {UPV may-ago 22}
 }
 
-@misc{Martinez2022_Sistemas_inteligentes,
+@unpublished{Martinez2022_Sistemas_inteligentes,
   title     = {Sistemas Inteligentes},
   author    = {Martinez, Luis},
   year      = {2022},
@@ -150,7 +150,7 @@
   comment   = {UPV ene-abr 22}
 }
 
-@misc{Martinez2021_Programacion_movil_sep_dic,
+@unpublished{Martinez2021_Programacion_movil_sep_dic,
   title     = {Programación Móvil},
   author    = {Martinez, Luis},
   year      = {2021},
@@ -158,7 +158,7 @@
   comment   = {UPV sep-dic 21}
 }
 
-@misc{Martinez2021_Lenguajes_automata,
+@unpublished{Martinez2021_Lenguajes_automata,
   title     = {Lenguajes y Autómatas},
   author    = {Martinez, Luis},
   year      = {2021},
@@ -166,7 +166,7 @@
   comment   = {UPV sep-dic 21}
 }
 
-@misc{Martinez2021_Programacion_movil_may_ago,
+@unpublished{Martinez2021_Programacion_movil_may_ago,
   title     = {Programación Móvil},
   author    = {Martinez, Luis},
   year      = {2021},
@@ -174,7 +174,7 @@
   comment   = {UPV may-ago 21}
 }
 
-@misc{Martinez2021_Fundamentos_programacion_objetos,
+@unpublished{Martinez2021_Fundamentos_programacion_objetos,
   title     = {Fundamentos de Programación Orientada a Objetos},
   author    = {Martinez, Luis},
   year      = {2021},
@@ -182,7 +182,7 @@
   comment   = {UPV ene-abr 21}
 }
 
-@misc{Martinez2020_Lenguajes_automata,
+@unpublished{Martinez2020_Lenguajes_automata,
   title     = {Lenguajes y Autómatas},
   author    = {Martinez, Luis},
   year      = {2020},
@@ -190,7 +190,7 @@
   comment   = {UPV sep-dic 20}
 }
 
-@misc{Martinez2020_Computo_dispositivos_moviles,
+@unpublished{Martinez2020_Computo_dispositivos_moviles,
   title     = {Cómputo en Dispositivos Móviles},
   author    = {Martinez, Luis},
   year      = {2020},
@@ -198,7 +198,7 @@
   comment   = {UPV may-ago 20}
 }
 
-@misc{Martinez2020_Adquisicion_procesamiento_imagenes,
+@unpublished{Martinez2020_Adquisicion_procesamiento_imagenes,
   title     = {Adquistion y Procesamiento de Imágenes},
   author    = {Martinez, Luis},
   year      = {2020},
@@ -206,7 +206,7 @@
   comment   = {ULSA ene-may 20}
 }
 
-@misc{Martinez2020_Introduccion_graficacion_computadora_ene_abr,
+@unpublished{Martinez2020_Introduccion_graficacion_computadora_ene_abr,
   title     = {Introducción a la Graficación por Computadora},
   author    = {Martinez, Luis},
   year      = {2020},
@@ -214,7 +214,7 @@
   comment   = {UPV ene-abr 20}
 }
 
-@misc{Martinez2020_Graficacion_computadora_avanzada,
+@unpublished{Martinez2020_Graficacion_computadora_avanzada,
   title     = {Graficación por Computadora Avanzada},
   author    = {Martinez, Luis},
   year      = {2020},
@@ -222,7 +222,7 @@
   comment   = {UPV ene-abr 20}
 }
 
-@misc{Martinez2019_Introduccion_graficacion_computadora_sep_dic,
+@unpublished{Martinez2019_Introduccion_graficacion_computadora_sep_dic,
   title     = {Introducción a la Graficación por Computadora},
   author    = {Martinez, Luis},
   year      = {2019},
@@ -230,7 +230,7 @@
   comment   = {UPV sep-dic 19}
 }
 
-@misc{Martinez2019_Computo_dispositivos_moviles,
+@unpublished{Martinez2019_Computo_dispositivos_moviles,
   title     = {Cómputo en Dispositivos Móviles},
   author    = {Martinez, Luis},
   year      = {2019},
@@ -238,7 +238,7 @@
   comment   = {UPV may-ago 19}
 }
 
-@misc{Martinez2019_Introduccion_graficacion_computadora_ene_abr,
+@unpublished{Martinez2019_Introduccion_graficacion_computadora_ene_abr,
   title     = {Introducción a la Graficación por Computadora},
   author    = {Martinez, Luis},
   year      = {2019},
@@ -246,7 +246,7 @@
   comment   = {UPV ene-abr 19}
 }
 
-@misc{Martinez2019_Graficacion_computadora_avanzada,
+@unpublished{Martinez2019_Graficacion_computadora_avanzada,
   title     = {Graficación por Computadora Avanzada},
   author    = {Martinez, Luis},
   year      = {2019},
@@ -254,7 +254,7 @@
   comment   = {UPV ene-abr 19}
 }
 
-@misc{Martinez2018_Introduccion_graficacion_computadora_sep_dic,
+@unpublished{Martinez2018_Introduccion_graficacion_computadora_sep_dic,
   title     = {Introducción a la Graficación por Computadora},
   author    = {Martinez, Luis},
   year      = {2018},
@@ -262,7 +262,7 @@
   comment   = {UPV sep-dic 18}
 }
 
-@misc{Martinez2018_Computo_dispositivos_moviles,
+@unpublished{Martinez2018_Computo_dispositivos_moviles,
   title     = {Cómputo en Dispositivos Móviles},
   author    = {Martinez, Luis},
   year      = {2018},
@@ -270,7 +270,7 @@
   comment   = {UPV may-ago 18}
 }
 
-@misc{Martinez2018_Introduccion_graficacion_computadora_ene_abr,
+@unpublished{Martinez2018_Introduccion_graficacion_computadora_ene_abr,
   title     = {Introducción a la Graficación por Computadora},
   author    = {Martinez, Luis},
   year      = {2018},
@@ -278,7 +278,7 @@
   comment   = {UPV ene-abr 18}
 }
 
-@misc{Martinez2018_Graficacion_computadora_avanzada,
+@unpublished{Martinez2018_Graficacion_computadora_avanzada,
   title     = {Graficación por Computadora Avanzada},
   author    = {Martinez, Luis},
   year      = {2018},
@@ -286,7 +286,7 @@
   comment   = {UPV ene-abr 18}
 }
 
-@misc{Martinez2017_Introduccion_graficacion_computadora,
+@unpublished{Martinez2017_Introduccion_graficacion_computadora,
   title     = {Introducción a la Graficación por Computadora},
   author    = {Martinez, Luis},
   year      = {2017},
@@ -294,7 +294,7 @@
   comment   = {UPV sep-dic 17}
 }
 
-@misc{Martinez2017_Computo_dispositivos_moviles,
+@unpublished{Martinez2017_Computo_dispositivos_moviles,
   title     = {Cómputo en Dispositivos Móviles},
   author    = {Martinez, Luis},
   year      = {2017},
@@ -302,7 +302,7 @@
   comment   = {UPV may-ago 17}
 }
 
-@misc{Martinez2017_Graficacion_computadora_avanzada,
+@unpublished{Martinez2017_Graficacion_computadora_avanzada,
   title     = {Graficación por Computadora Avanzada},
   author    = {Martinez, Luis},
   year      = {2017},
@@ -310,7 +310,7 @@
   comment   = {UPV ene-abr 17}
 }
 
-@misc{Martinez2016_Computo_dispositivos_moviles_sep_dic,
+@unpublished{Martinez2016_Computo_dispositivos_moviles_sep_dic,
   title     = {Cómputo en Dispositivos Móviles},
   author    = {Martinez, Luis},
   year      = {2016},
@@ -318,7 +318,7 @@
   comment   = {UPV sep-dic 16}
 }
 
-@misc{Martinez2016_Computo_dispositivos_moviles_may_ago,
+@unpublished{Martinez2016_Computo_dispositivos_moviles_may_ago,
   title     = {Cómputo en Dispositivos Móviles},
   author    = {Martinez, Luis},
   year      = {2016},
@@ -326,7 +326,7 @@
   comment   = {UPV may-ago 16}
 }
 
-@misc{Martinez2016_Graficacion_computadora_avanzada,
+@unpublished{Martinez2016_Graficacion_computadora_avanzada,
   title     = {Graficación por Computadora Avanzada},
   author    = {Martinez, Luis},
   year      = {2016},
@@ -334,7 +334,7 @@
   comment   = {UPV ene-abr 16}
 }
 
-@misc{Martinez2015_Computo_dispositivos_moviles_sep_dic,
+@unpublished{Martinez2015_Computo_dispositivos_moviles_sep_dic,
   title     = {Cómputo en Dispositivos Móviles},
   author    = {Martinez, Luis},
   year      = {2015},
@@ -342,7 +342,7 @@
   comment   = {UPV sep-dic 15}
 }
 
-@misc{Martinez2015_Computo_dispositivos_moviles_may_ago,
+@unpublished{Martinez2015_Computo_dispositivos_moviles_may_ago,
   title     = {Cómputo en Dispositivos Móviles},
   author    = {Martinez, Luis},
   year      = {2015},
@@ -350,7 +350,7 @@
   comment   = {UPV may-ago 15}
 }
 
-@misc{Martinez2014_Computo_dispositivos_moviles_sep_dic,
+@unpublished{Martinez2014_Computo_dispositivos_moviles_sep_dic,
   title     = {Cómputo en Dispositivos Móviles},
   author    = {Martinez, Luis},
   year      = {2014},
@@ -358,7 +358,7 @@
   comment   = {UPV sep-dic 14}
 }
 
-@misc{Martinez2014_Sistemas_embebidos_may_ago,
+@unpublished{Martinez2014_Sistemas_embebidos_may_ago,
   title     = {Sistemas Embebidos},
   author    = {Martinez, Luis},
   year      = {2014},
@@ -366,7 +366,7 @@
   comment   = {UPV may-ago 14}
 }
 
-@misc{Martinez2014_Computo_dispositivos_moviles_may_ago,
+@unpublished{Martinez2014_Computo_dispositivos_moviles_may_ago,
   title     = {Cómputo en Dispositivos Móviles},
   author    = {Martinez, Luis},
   year      = {2014},
@@ -374,7 +374,7 @@
   comment   = {UPV may-ago 14}
 }
 
-@misc{Martinez2014_Procesamiento_paralelo_distribuido,
+@unpublished{Martinez2014_Procesamiento_paralelo_distribuido,
   title     = {Procesamiento Paralelo y Distribuido},
   author    = {Martinez, Luis},
   year      = {2014},
@@ -382,7 +382,7 @@
   comment   = {UPV ene-abr 14}
 }
 
-@misc{Martinez2014_Graficacion_computadora_avanzada,
+@unpublished{Martinez2014_Graficacion_computadora_avanzada,
   title     = {Graficación por Computadora Avanzada},
   author    = {Martinez, Luis},
   year      = {2014},
@@ -390,7 +390,7 @@
   comment   = {UPV ene-abr 14}
 }
 
-@misc{Martinez2013_Computo_dispositivos_moviles_sep_dic,
+@unpublished{Martinez2013_Computo_dispositivos_moviles_sep_dic,
   title     = {Cómputo en Dispositivos Móviles},
   author    = {Martinez, Luis},
   year      = {2013},
@@ -398,7 +398,7 @@
   comment   = {UPV sep-dic 13}
 }
 
-@misc{Martinez2013_Sistemas_embebidos_may_ago,
+@unpublished{Martinez2013_Sistemas_embebidos_may_ago,
   title     = {Sistemas Embebidos},
   author    = {Martinez, Luis},
   year      = {2013},
@@ -406,7 +406,7 @@
   comment   = {UPV may-ago 13}
 }
 
-@misc{Martinez2013_Computo_dispositivos_moviles_may_ago,
+@unpublished{Martinez2013_Computo_dispositivos_moviles_may_ago,
   title     = {Cómputo en Dispositivos Móviles},
   author    = {Martinez, Luis},
   year      = {2013},
@@ -414,7 +414,7 @@
   comment   = {UPV may-ago 13}
 }
 
-@misc{Martinez2013_Graficacion_computadora_avanzada_may_ago,
+@unpublished{Martinez2013_Graficacion_computadora_avanzada_may_ago,
   title     = {Graficación por Computadora Avanzada},
   author    = {Martinez, Luis},
   year      = {2013},
@@ -422,7 +422,7 @@
   comment   = {UPV may-ago 13}
 }
 
-@misc{Martinez2013_Introduccion_graficacion_computadora,
+@unpublished{Martinez2013_Introduccion_graficacion_computadora,
   title     = {Introducción a la Graficación por Computadora},
   author    = {Martinez, Luis},
   year      = {2013},
@@ -430,7 +430,7 @@
   comment   = {UPV ene-abr 13}
 }
 
-@misc{Martinez2013_Graficacion_computadora_avanzada_ene_abr,
+@unpublished{Martinez2013_Graficacion_computadora_avanzada_ene_abr,
   title     = {Graficación por Computadora Avanzada},
   author    = {Martinez, Luis},
   year      = {2013},
@@ -438,7 +438,7 @@
   comment   = {UPV ene-abr 13}
 }
 
-@misc{Martinez2012_Introduccion_graficacion_computadora,
+@unpublished{Martinez2012_Introduccion_graficacion_computadora,
   title     = {Introducción a la Graficación por Computadora},
   author    = {Martinez, Luis},
   year      = {2012},
@@ -446,7 +446,7 @@
   comment   = {UPV ago-dic 12}
 }
 
-@misc{Martinez2012_Sistemas_embebidos,
+@unpublished{Martinez2012_Sistemas_embebidos,
   title     = {Sistemas Embebidos},
   author    = {Martinez, Luis},
   year      = {2012},
@@ -454,7 +454,7 @@
   comment   = {UPV may-ago 12}
 }
 
-@misc{Martinez2012_Arquitectura_procesadores,
+@unpublished{Martinez2012_Arquitectura_procesadores,
   title     = {Arquitectura de Procesadores},
   author    = {Martinez, Luis},
   year      = {2012},
@@ -462,7 +462,7 @@
   comment   = {UPV ene-abr 12}
 }
 
-@misc{Martinez2011_Sistemas_embebidos_ago_dic,
+@unpublished{Martinez2011_Sistemas_embebidos_ago_dic,
   title     = {Sistemas Embebidos},
   author    = {Martinez, Luis},
   year      = {2011},
@@ -470,7 +470,7 @@
   comment   = {UPV ago-dic 11}
 }
 
-@misc{Martinez2011_Arquitectura_procesadores,
+@unpublished{Martinez2011_Arquitectura_procesadores,
   title     = {Arquitectura de Procesadores},
   author    = {Martinez, Luis},
   year      = {2011},
@@ -478,7 +478,7 @@
   comment   = {UPV ago-dic 11}
 }
 
-@misc{Martinez2011_Sistemas_embebidos_may_ago,
+@unpublished{Martinez2011_Sistemas_embebidos_may_ago,
   title     = {Sistemas Embebidos},
   author    = {Martinez, Luis},
   year      = {2011},
@@ -486,7 +486,7 @@
   comment   = {UPV may-ago 11}
 }
 
-@misc{Martinez2010_Arquitectura_procesadores_may_ago,
+@unpublished{Martinez2010_Arquitectura_procesadores_may_ago,
   title     = {Arquitectura de Procesadores},
   author    = {Martinez, Luis},
   year      = {2010},
@@ -494,7 +494,7 @@
   comment   = {UPV may-ago 10}
 }
 
-@misc{Martinez2010_Sistemas_operativos,
+@unpublished{Martinez2010_Sistemas_operativos,
   title     = {Sistemas Operativos},
   author    = {Martinez, Luis},
   year      = {2010},
@@ -502,7 +502,7 @@
   comment   = {UPV may-ago 10}
 }
 
-@misc{Martinez2010_Sistemas_embebidos,
+@unpublished{Martinez2010_Sistemas_embebidos,
   title     = {Sistemas Embebidos},
   author    = {Martinez, Luis},
   year      = {2010},
@@ -510,7 +510,7 @@
   comment   = {UPV may-ago 10}
 }
 
-@misc{Martinez2010_Arquitectura_procesadores_ene_abr,
+@unpublished{Martinez2010_Arquitectura_procesadores_ene_abr,
   title     = {Arquitectura de Procesadores},
   author    = {Martinez, Luis},
   year      = {2010},
@@ -518,7 +518,7 @@
   comment   = {UPV ene-abr 10}
 }
 
-@misc{Martinez2010_Programacion_orientada_objetos,
+@unpublished{Martinez2010_Programacion_orientada_objetos,
   title     = {Programación Orientada a Objetos},
   author    = {Martinez, Luis},
   year      = {2010},
@@ -526,7 +526,7 @@
   comment   = {UPV ene-abr 10}
 }
 
-@misc{Martinez2009_Programacion_orientada_objetos,
+@unpublished{Martinez2009_Programacion_orientada_objetos,
   title     = {Programación Orientada a Objetos},
   author    = {Martinez, Luis},
   year      = {2009},
@@ -534,7 +534,7 @@
   comment   = {UPV sep-dic 09}
 }
 
-@misc{Martinez2009_Organizacion_computadoras,
+@unpublished{Martinez2009_Organizacion_computadoras,
   title     = {Organización de Computadoras},
   author    = {Martinez, Luis},
   year      = {2009},
@@ -542,7 +542,7 @@
   comment   = {UPV sep-dic 09}
 }
 
-@misc{Martinez2009_Circuitos_logicos,
+@unpublished{Martinez2009_Circuitos_logicos,
   title     = {Circuitos Lógicos},
   author    = {Martinez, Luis},
   year      = {2009},
@@ -550,7 +550,7 @@
   comment   = {UPV sep-dic 09}
 }
 
-@misc{Martinez2009_Inteligencia_artificial,
+@unpublished{Martinez2009_Inteligencia_artificial,
   title     = {Inteligencia Artificial},
   author    = {Martinez, Luis},
   year      = {2009},
@@ -558,7 +558,7 @@
   comment   = {ITSA ene-jun 09}
 }
 
-@misc{Martinez2009_Interfases,
+@unpublished{Martinez2009_Interfases,
   title     = {Interfases},
   author    = {Martinez, Luis},
   year      = {2009},
@@ -566,7 +566,7 @@
   comment   = {ITSA ene-jun 09}
 }
 
-@misc{Martinez2008_Graficacion_computadora,
+@unpublished{Martinez2008_Graficacion_computadora,
   title     = {Graficación por Computadora},
   author    = {Martinez, Luis},
   year      = {2008},
@@ -574,7 +574,7 @@
   comment   = {ITSA ago-dic 08}
 }
 
-@misc{Martinez2008_Lenguaje_ensamblador,
+@unpublished{Martinez2008_Lenguaje_ensamblador,
   title     = {Lenguaje Ensamblador},
   author    = {Martinez, Luis},
   year      = {2008},
@@ -582,7 +582,7 @@
   comment   = {ITSA ago-dic 08}
 }
 
-@misc{Martinez2008_Inteligencia_artificial,
+@unpublished{Martinez2008_Inteligencia_artificial,
   title     = {Inteligencia Artificial},
   author    = {Martinez, Luis},
   year      = {2008},
@@ -590,7 +590,7 @@
   comment   = {ITSA ene-jun 08}
 }
 
-@misc{Martinez2008_Interfases,
+@unpublished{Martinez2008_Interfases,
   title     = {Interfases},
   author    = {Martinez, Luis},
   year      = {2008},
@@ -598,7 +598,7 @@
   comment   = {ITSA ene-jun 08}
 }
 
-@misc{Martinez2007_Graficacion_computadora,
+@unpublished{Martinez2007_Graficacion_computadora,
   title     = {Graficación por Computadora},
   author    = {Martinez, Luis},
   year      = {2007},
@@ -606,7 +606,7 @@
   comment   = {ITSA ago-dic 07}
 }
 
-@misc{Martinez2007_Lenguaje_ensamblador,
+@unpublished{Martinez2007_Lenguaje_ensamblador,
   title     = {Lenguaje Ensamblador},
   author    = {Martinez, Luis},
   year      = {2007},
@@ -614,7 +614,7 @@
   comment   = {ITSA ago-dic 07}
 }
 
-@misc{Martinez2007_Interfases,
+@unpublished{Martinez2007_Interfases,
   title     = {Interfases},
   author    = {Martinez, Luis},
   year      = {2007},
@@ -622,7 +622,7 @@
   comment   = {ITSA ene-jun 07}
 }
 
-@misc{Martinez2006_Arquitecturas_avanzadas_computadoras,
+@unpublished{Martinez2006_Arquitecturas_avanzadas_computadoras,
   title     = {Arquitecturas Avanzadas de Computadoras},
   author    = {Martinez, Luis},
   year      = {2006},
@@ -630,7 +630,7 @@
   comment   = {UPP sep-dic 06}
 }
 
-@misc{Martinez2006_Herramientas_ofimaticas,
+@unpublished{Martinez2006_Herramientas_ofimaticas,
   title     = {Herramientas Ofimaticas},
   author    = {Martinez, Luis},
   year      = {2006},
@@ -638,7 +638,7 @@
   comment   = {UPP sep-dic 06}
 }
 
-@misc{Martinez2006_Lenguaje_ensamblador,
+@unpublished{Martinez2006_Lenguaje_ensamblador,
   title     = {Lenguaje Ensamblador},
   author    = {Martinez, Luis},
   year      = {2006},
@@ -646,7 +646,7 @@
   comment   = {ITSA ago-dic 06}
 }
 
-@misc{Martinez2006_Programacion_sistemas,
+@unpublished{Martinez2006_Programacion_sistemas,
   title     = {Programación de Sistemas I},
   author    = {Martinez, Luis},
   year      = {2006},
@@ -654,7 +654,7 @@
   comment   = {ITSA jul-ago 06}
 }
 
-@misc{Martinez2006_Arquitectura_computadoras_II,
+@unpublished{Martinez2006_Arquitectura_computadoras_II,
   title     = {Arquitectura de Computadoras II},
   author    = {Martinez, Luis},
   year      = {2006},
@@ -662,7 +662,7 @@
   comment   = {ITSA ene-jun 06}
 }
 
-@misc{Martinez2006_Arquitectura_computadoras_I,
+@unpublished{Martinez2006_Arquitectura_computadoras_I,
   title     = {Arquitectura de Computadoras I},
   author    = {Martinez, Luis},
   year      = {2006},
@@ -670,7 +670,7 @@
   comment   = {ITSA ene-jun 06}
 }
 
-@misc{Martinez2005_Arquitectura_computadoras_II,
+@unpublished{Martinez2005_Arquitectura_computadoras_II,
   title     = {Arquitectura de Computadoras II},
   author    = {Martinez, Luis},
   year      = {2005},
@@ -678,7 +678,7 @@
   comment   = {ITSA ago-dic 05}
 }
 
-@misc{Martinez2005_Sistemas_digitales,
+@unpublished{Martinez2005_Sistemas_digitales,
   title     = {Sistemas Digitales},
   author    = {Martinez, Luis},
   year      = {2005},
@@ -686,7 +686,7 @@
   comment   = {ITSA ago-dic 05}
 }
 
-@misc{Martinez2005_Seminario_sistemas_digitales,
+@unpublished{Martinez2005_Seminario_sistemas_digitales,
   title     = {Seminario de Sistemas Digitales y sus Aplicaciones},
   author    = {Martinez, Luis},
   year      = {2005},
@@ -694,7 +694,7 @@
   comment   = {ITSA jul-ago 05}
 }
 
-@misc{Martinez2005_Programacion_sistemas,
+@unpublished{Martinez2005_Programacion_sistemas,
   title     = {Programación de Sistemas I},
   author    = {Martinez, Luis},
   year      = {2005},
