--- a/AsignaturasLicenciatura.bib
+++ b/AsignaturasLicenciatura.bib
@@ -3,7 +3,7 @@
   author    = {Martinez, Luis},
   year      = {2026},
   month     = {apr},
-  comment   = {UPV ene-abr 26}
+  howpublished   = {UPV ene-abr 26}
 }
 
 @unpublished{Martinez2026_Sistemas_inteligentes,
@@ -11,7 +11,7 @@
   author    = {Martinez, Luis},
   year      = {2026},
   month     = {apr},
-  comment   = {UPV ene-abr 26}
+  howpublished   = {UPV ene-abr 26}
 }
 
 @unpublished{Martinez2025_Desarrollo_aplicaciones_moviles,
@@ -19,7 +19,7 @@
   author    = {Martinez, Luis},
   year      = {2025},
   month     = {dec},
-  comment   = {UPV sep-dic 25}
+  howpublished   = {UPV sep-dic 25}
 }
 
 @unpublished{Martinez2025_Proyecto_integrador,
@@ -27,7 +27,7 @@
   author    = {Martinez, Luis},
   year      = {2025},
   month     = {aug},
-  comment   = {UPV may-ago 25}
+  howpublished   = {UPV may-ago 25}
 }
 
 @unpublished{Martinez2025_Programacion_movil,
@@ -35,7 +35,7 @@
   author    = {Martinez, Luis},
   year      = {2025},
   month     = {aug},
-  comment   = {UPV may-ago 25}
+  howpublished   = {UPV may-ago 25}
 }
 
 @unpublished{Martinez2025_Sistemas_inteligentes,
@@ -43,7 +43,7 @@
   author    = {Martinez, Luis},
   year      = {2025},
   month     = {apr},
-  comment   = {UPV ene-abr 25}
+  howpublished   = {UPV ene-abr 25}
 }
 
 @unpublished{Martinez2024_Programacion_movil,
@@ -51,7 +51,7 @@
   author    = {Martinez, Luis},
   year      = {2024},
   month     = {dec},
-  comment   = {UPV sep-dic 24}
+  howpublished   = {UPV sep-dic 24}
 }
 
 @unpublished{Martinez2024_Sistemas_inteligentes,
@@ -59,7 +59,7 @@
   author    = {Martinez, Luis},
   year      = {2024},
   month     = {aug},
-  comment   = {UPV may-ago 24}
+  howpublished   = {UPV may-ago 24}
 }
 
 @unpublished{Martinez2024_Programacion_orientada_objetos,
@@ -67,7 +67,7 @@
   author    = {Martinez, Luis},
   year      = {2024},
   month     = {aug},
-  comment   = {UPV may-ago 24}
+  howpublished   = {UPV may-ago 24}
 }
 
 @unpublished{Martinez2024_Programacion_movil_ene_abr,
@@ -75,7 +75,7 @@
   author    = {Martinez, Luis},
   year      = {2024},
   month     = {apr},
-  comment   = {UPV ene-abr 24}
+  howpublished   = {UPV ene-abr 24}
 }
 
 @unpublished{Martinez2024_Lenguajes_automata,
@@ -83,7 +83,7 @@
   author    = {Martinez, Luis},
   year      = {2024},
   month     = {apr},
-  comment   = {UPV ene-abr 24}
+  howpublished   = {UPV ene-abr 24}
 }
 
 @unpublished{Martinez2023_Programacion_movil,
@@ -91,7 +91,7 @@
   author    = {Martinez, Luis},
   year      = {2023},
   month     = {dec},
-  comment   = {UPV sep-dic 23}
+  howpublished   = {UPV sep-dic 23}
 }
 
 @unpublished{Martinez2023_Fundamentos_programacion_objetos,
@@ -99,7 +99,7 @@
   author    = {Martinez, Luis},
   year      = {2023},
   month     = {aug},
-  comment   = {UPV may-ago 23}
+  howpublished   = {UPV may-ago 23}
 }
 
 @unpublished{Martinez2023_Sistemas_inteligentes,
@@ -107,7 +107,7 @@
   author    = {Martinez, Luis},
   year      = {2023},
   month     = {aug},
-  comment   = {UPV may-ago 23}
+  howpublished   = {UPV may-ago 23}
 }
 
 @unpublished{Martinez2023_Lenguajes_automata,
@@ -115,7 +115,7 @@
   author    = {Martinez, Luis},
   year      = {2023},
   month     = {apr},
-  comment   = {UPV ene-abr 23}
+  howpublished   = {UPV ene-abr 23}
 }
 
 @unpublished{Martinez2022_Programacion_orientada_objetos,
@@ -123,7 +123,7 @@
   author    = {Martinez, Luis},
   year      = {2022},
   month     = {dec},
-  comment   = {UPV sep-dic 22}
+  howpublished   = {UPV sep-dic 22}
 }
 
 @unpublished{Martinez2022_Programacion_movil_sep_dic,
@@ -131,7 +131,7 @@
   author    = {Martinez, Luis},
   year      = {2022},
   month     = {dec},
-  comment   = {UPV sep-dic 22}
+  howpublished   = {UPV sep-dic 22}
 }
 
 @unpublished{Martinez2022_Programacion_movil_may_ago,
@@ -139,7 +139,7 @@
   author    = {Martinez, Luis},
   year      = {2022},
   month     = {aug},
-  comment   = {UPV may-ago 22}
+  howpublished   = {UPV may-ago 22}
 }
 
 @unpublished{Martinez2022_Sistemas_inteligentes,
@@ -147,7 +147,7 @@
   author    = {Martinez, Luis},
   year      = {2022},
   month     = {apr},
-  comment   = {UPV ene-abr 22}
+  howpublished   = {UPV ene-abr 22}
 }
 
 @unpublished{Martinez2021_Programacion_movil_sep_dic,
@@ -155,7 +155,7 @@
   author    = {Martinez, Luis},
   year      = {2021},
   month     = {dec},
-  comment   = {UPV sep-dic 21}
+  howpublished   = {UPV sep-dic 21}
 }
 
 @unpublished{Martinez2021_Lenguajes_automata,
@@ -163,7 +163,7 @@
   author    = {Martinez, Luis},
   year      = {2021},
   month     = {dec},
-  comment   = {UPV sep-dic 21}
+  howpublished   = {UPV sep-dic 21}
 }
 
 @unpublished{Martinez2021_Programacion_movil_may_ago,
@@ -171,7 +171,7 @@
   author    = {Martinez, Luis},
   year      = {2021},
   month     = {aug},
-  comment   = {UPV may-ago 21}
+  howpublished   = {UPV may-ago 21}
 }
 
 @unpublished{Martinez2021_Fundamentos_programacion_objetos,
@@ -179,7 +179,7 @@
   author    = {Martinez, Luis},
   year      = {2021},
   month     = {apr},
-  comment   = {UPV ene-abr 21}
+  howpublished   = {UPV ene-abr 21}
 }
 
 @unpublished{Martinez2020_Lenguajes_automata,
@@ -187,7 +187,7 @@
   author    = {Martinez, Luis},
   year      = {2020},
   month     = {dec},
-  comment   = {UPV sep-dic 20}
+  howpublished   = {UPV sep-dic 20}
 }
 
 @unpublished{Martinez2020_Computo_dispositivos_moviles,
@@ -195,7 +195,7 @@
   author    = {Martinez, Luis},
   year      = {2020},
   month     = {aug},
-  comment   = {UPV may-ago 20}
+  howpublished   = {UPV may-ago 20}
 }
 
 @unpublished{Martinez2020_Adquisicion_procesamiento_imagenes,
@@ -203,7 +203,7 @@
   author    = {Martinez, Luis},
   year      = {2020},
   month     = {may},
-  comment   = {ULSA ene-may 20}
+  howpublished   = {ULSA ene-may 20}
 }
 
 @unpublished{Martinez2020_Introduccion_graficacion_computadora_ene_abr,
@@ -211,7 +211,7 @@
   author    = {Martinez, Luis},
   year      = {2020},
   month     = {apr},
-  comment   = {UPV ene-abr 20}
+  howpublished   = {UPV ene-abr 20}
 }
 
 @unpublished{Martinez2020_Graficacion_computadora_avanzada,
@@ -219,7 +219,7 @@
   author    = {Martinez, Luis},
   year      = {2020},
   month     = {apr},
-  comment   = {UPV ene-abr 20}
+  howpublished   = {UPV ene-abr 20}
 }
 
 @unpublished{Martinez2019_Introduccion_graficacion_computadora_sep_dic,
@@ -227,7 +227,7 @@
   author    = {Martinez, Luis},
   year      = {2019},
   month     = {dec},
-  comment   = {UPV sep-dic 19}
+  howpublished   = {UPV sep-dic 19}
 }
 
 @unpublished{Martinez2019_Computo_dispositivos_moviles,
@@ -235,7 +235,7 @@
   author    = {Martinez, Luis},
   year      = {2019},
   month     = {aug},
-  comment   = {UPV may-ago 19}
+  howpublished   = {UPV may-ago 19}
 }
 
 @unpublished{Martinez2019_Introduccion_graficacion_computadora_ene_abr,
@@ -243,7 +243,7 @@
   author    = {Martinez, Luis},
   year      = {2019},
   month     = {apr},
-  comment   = {UPV ene-abr 19}
+  howpublished   = {UPV ene-abr 19}
 }
 
 @unpublished{Martinez2019_Graficacion_computadora_avanzada,
@@ -251,7 +251,7 @@
   author    = {Martinez, Luis},
   year      = {2019},
   month     = {apr},
-  comment   = {UPV ene-abr 19}
+  howpublished   = {UPV ene-abr 19}
 }
 
 @unpublished{Martinez2018_Introduccion_graficacion_computadora_sep_dic,
@@ -259,7 +259,7 @@
   author    = {Martinez, Luis},
   year      = {2018},
   month     = {dec},
-  comment   = {UPV sep-dic 18}
+  howpublished   = {UPV sep-dic 18}
 }
 
 @unpublished{Martinez2018_Computo_dispositivos_moviles,
@@ -267,7 +267,7 @@
   author    = {Martinez, Luis},
   year      = {2018},
   month     = {aug},
-  comment   = {UPV may-ago 18}
+  howpublished   = {UPV may-ago 18}
 }
 
 @unpublished{Martinez2018_Introduccion_graficacion_computadora_ene_abr,
@@ -275,7 +275,7 @@
   author    = {Martinez, Luis},
   year      = {2018},
   month     = {apr},
-  comment   = {UPV ene-abr 18}
+  howpublished   = {UPV ene-abr 18}
 }
 
 @unpublished{Martinez2018_Graficacion_computadora_avanzada,
@@ -283,7 +283,7 @@
   author    = {Martinez, Luis},
   year      = {2018},
   month     = {apr},
-  comment   = {UPV ene-abr 18}
+  howpublished   = {UPV ene-abr 18}
 }
 
 @unpublished{Martinez2017_Introduccion_graficacion_computadora,
@@ -291,7 +291,7 @@
   author    = {Martinez, Luis},
   year      = {2017},
   month     = {dec},
-  comment   = {UPV sep-dic 17}
+  howpublished   = {UPV sep-dic 17}
 }
 
 @unpublished{Martinez2017_Computo_dispositivos_moviles,
@@ -299,7 +299,7 @@
   author    = {Martinez, Luis},
   year      = {2017},
   month     = {aug},
-  comment   = {UPV may-ago 17}
+  howpublished   = {UPV may-ago 17}
 }
 
 @unpublished{Martinez2017_Graficacion_computadora_avanzada,
@@ -307,7 +307,7 @@
   author    = {Martinez, Luis},
   year      = {2017},
   month     = {apr},
-  comment   = {UPV ene-abr 17}
+  howpublished   = {UPV ene-abr 17}
 }
 
 @unpublished{Martinez2016_Computo_dispositivos_moviles_sep_dic,
@@ -315,7 +315,7 @@
   author    = {Martinez, Luis},
   year      = {2016},
   month     = {dec},
-  comment   = {UPV sep-dic 16}
+  howpublished   = {UPV sep-dic 16}
 }
 
 @unpublished{Martinez2016_Computo_dispositivos_moviles_may_ago,
@@ -323,7 +323,7 @@
   author    = {Martinez, Luis},
   year      = {2016},
   month     = {aug},
-  comment   = {UPV may-ago 16}
+  howpublished   = {UPV may-ago 16}
 }
 
 @unpublished{Martinez2016_Graficacion_computadora_avanzada,
@@ -331,7 +331,7 @@
   author    = {Martinez, Luis},
   year      = {2016},
   month     = {apr},
-  comment   = {UPV ene-abr 16}
+  howpublished   = {UPV ene-abr 16}
 }
 
 @unpublished{Martinez2015_Computo_dispositivos_moviles_sep_dic,
@@ -339,7 +339,7 @@
   author    = {Martinez, Luis},
   year      = {2015},
   month     = {dec},
-  comment   = {UPV sep-dic 15}
+  howpublished   = {UPV sep-dic 15}
 }
 
 @unpublished{Martinez2015_Computo_dispositivos_moviles_may_ago,
@@ -347,7 +347,7 @@
   author    = {Martinez, Luis},
   year      = {2015},
   month     = {aug},
-  comment   = {UPV may-ago 15}
+  howpublished   = {UPV may-ago 15}
 }
 
 @unpublished{Martinez2014_Computo_dispositivos_moviles_sep_dic,
@@ -355,7 +355,7 @@
   author    = {Martinez, Luis},
   year      = {2014},
   month     = {dec},
-  comment   = {UPV sep-dic 14}
+  howpublished   = {UPV sep-dic 14}
 }
 
 @unpublished{Martinez2014_Sistemas_embebidos_may_ago,
@@ -363,7 +363,7 @@
   author    = {Martinez, Luis},
   year      = {2014},
   month     = {aug},
-  comment   = {UPV may-ago 14}
+  howpublished   = {UPV may-ago 14}
 }
 
 @unpublished{Martinez2014_Computo_dispositivos_moviles_may_ago,
@@ -371,7 +371,7 @@
   author    = {Martinez, Luis},
   year      = {2014},
   month     = {aug},
-  comment   = {UPV may-ago 14}
+  howpublished   = {UPV may-ago 14}
 }
 
 @unpublished{Martinez2014_Procesamiento_paralelo_distribuido,
@@ -379,7 +379,7 @@
   author    = {Martinez, Luis},
   year      = {2014},
   month     = {apr},
-  comment   = {UPV ene-abr 14}
+  howpublished   = {UPV ene-abr 14}
 }
 
 @unpublished{Martinez2014_Graficacion_computadora_avanzada,
@@ -387,7 +387,7 @@
   author    = {Martinez, Luis},
   year      = {2014},
   month     = {apr},
-  comment   = {UPV ene-abr 14}
+  howpublished   = {UPV ene-abr 14}
 }
 
 @unpublished{Martinez2013_Computo_dispositivos_moviles_sep_dic,
@@ -395,7 +395,7 @@
   author    = {Martinez, Luis},
   year      = {2013},
   month     = {dec},
-  comment   = {UPV sep-dic 13}
+  howpublished   = {UPV sep-dic 13}
 }
 
 @unpublished{Martinez2013_Sistemas_embebidos_may_ago,
@@ -403,7 +403,7 @@
   author    = {Martinez, Luis},
   year      = {2013},
   month     = {aug},
-  comment   = {UPV may-ago 13}
+  howpublished   = {UPV may-ago 13}
 }
 
 @unpublished{Martinez2013_Computo_dispositivos_moviles_may_ago,
@@ -411,7 +411,7 @@
   author    = {Martinez, Luis},
   year      = {2013},
   month     = {aug},
-  comment   = {UPV may-ago 13}
+  howpublished   = {UPV may-ago 13}
 }
 
 @unpublished{Martinez2013_Graficacion_computadora_avanzada_may_ago,
@@ -419,7 +419,7 @@
   author    = {Martinez, Luis},
   year      = {2013},
   month     = {aug},
-  comment   = {UPV may-ago 13}
+  howpublished   = {UPV may-ago 13}
 }
 
 @unpublished{Martinez2013_Introduccion_graficacion_computadora,
@@ -427,7 +427,7 @@
   author    = {Martinez, Luis},
   year      = {2013},
   month     = {apr},
-  comment   = {UPV ene-abr 13}
+  howpublished   = {UPV ene-abr 13}
 }
 
 @unpublished{Martinez2013_Graficacion_computadora_avanzada_ene_abr,
@@ -435,7 +435,7 @@
   author    = {Martinez, Luis},
   year      = {2013},
   month     = {apr},
-  comment   = {UPV ene-abr 13}
+  howpublished   = {UPV ene-abr 13}
 }
 
 @unpublished{Martinez2012_Introduccion_graficacion_computadora,
@@ -443,7 +443,7 @@
   author    = {Martinez, Luis},
   year      = {2012},
   month     = {dec},
-  comment   = {UPV ago-dic 12}
+  howpublished   = {UPV ago-dic 12}
 }
 
 @unpublished{Martinez2012_Sistemas_embebidos,
@@ -451,7 +451,7 @@
   author    = {Martinez, Luis},
   year      = {2012},
   month     = {aug},
-  comment   = {UPV may-ago 12}
+  howpublished   = {UPV may-ago 12}
 }
 
 @unpublished{Martinez2012_Arquitectura_procesadores,
@@ -459,7 +459,7 @@
   author    = {Martinez, Luis},
   year      = {2012},
   month     = {apr},
-  comment   = {UPV ene-abr 12}
+  howpublished   = {UPV ene-abr 12}
 }
 
 @unpublished{Martinez2011_Sistemas_embebidos_ago_dic,
@@ -467,7 +467,7 @@
   author    = {Martinez, Luis},
   year      = {2011},
   month     = {dec},
-  comment   = {UPV ago-dic 11}
+  howpublished   = {UPV ago-dic 11}
 }
 
 @unpublished{Martinez2011_Arquitectura_procesadores,
@@ -475,7 +475,7 @@
   author    = {Martinez, Luis},
   year      = {2011},
   month     = {dec},
-  comment   = {UPV ago-dic 11}
+  howpublished   = {UPV ago-dic 11}
 }
 
 @unpublished{Martinez2011_Sistemas_embebidos_may_ago,
@@ -483,7 +483,7 @@
   author    = {Martinez, Luis},
   year      = {2011},
   month     = {aug},
-  comment   = {UPV may-ago 11}
+  howpublished   = {UPV may-ago 11}
 }
 
 @unpublished{Martinez2010_Arquitectura_procesadores_may_ago,
@@ -491,7 +491,7 @@
   author    = {Martinez, Luis},
   year      = {2010},
   month     = {aug},
-  comment   = {UPV may-ago 10}
+  howpublished   = {UPV may-ago 10}
 }
 
 @unpublished{Martinez2010_Sistemas_operativos,
@@ -499,7 +499,7 @@
   author    = {Martinez, Luis},
   year      = {2010},
   month     = {aug},
-  comment   = {UPV may-ago 10}
+  howpublished   = {UPV may-ago 10}
 }
 
 @unpublished{Martinez2010_Sistemas_embebidos,
@@ -507,7 +507,7 @@
   author    = {Martinez, Luis},
   year      = {2010},
   month     = {aug},
-  comment   = {UPV may-ago 10}
+  howpublished   = {UPV may-ago 10}
 }
 
 @unpublished{Martinez2010_Arquitectura_procesadores_ene_abr,
@@ -515,7 +515,7 @@
   author    = {Martinez, Luis},
   year      = {2010},
   month     = {apr},
-  comment   = {UPV ene-abr 10}
+  howpublished   = {UPV ene-abr 10}
 }
 
 @unpublished{Martinez2010_Programacion_orientada_objetos,
@@ -523,7 +523,7 @@
   author    = {Martinez, Luis},
   year      = {2010},
   month     = {apr},
-  comment   = {UPV ene-abr 10}
+  howpublished   = {UPV ene-abr 10}
 }
 
 @unpublished{Martinez2009_Programacion_orientada_objetos,
@@ -531,7 +531,7 @@
   author    = {Martinez, Luis},
   year      = {2009},
   month     = {dec},
-  comment   = {UPV sep-dic 09}
+  howpublished   = {UPV sep-dic 09}
 }
 
 @unpublished{Martinez2009_Organizacion_computadoras,
@@ -539,7 +539,7 @@
   author    = {Martinez, Luis},
   year      = {2009},
   month     = {dec},
-  comment   = {UPV sep-dic 09}
+  howpublished   = {UPV sep-dic 09}
 }
 
 @unpublished{Martinez2009_Circuitos_logicos,
@@ -547,7 +547,7 @@
   author    = {Martinez, Luis},
   year      = {2009},
   month     = {dec},
-  comment   = {UPV sep-dic 09}
+  howpublished   = {UPV sep-dic 09}
 }
 
 @unpublished{Martinez2009_Inteligencia_artificial,
@@ -555,7 +555,7 @@
   author    = {Martinez, Luis},
   year      = {2009},
   month     = {jun},
-  comment   = {ITSA ene-jun 09}
+  howpublished   = {ITSA ene-jun 09}
 }
 
 @unpublished{Martinez2009_Interfases,
@@ -563,7 +563,7 @@
   author    = {Martinez, Luis},
   year      = {2009},
   month     = {jun},
-  comment   = {ITSA ene-jun 09}
+  howpublished   = {ITSA ene-jun 09}
 }
 
 @unpublished{Martinez2008_Graficacion_computadora,
@@ -571,7 +571,7 @@
   author    = {Martinez, Luis},
   year      = {2008},
   month     = {dec},
-  comment   = {ITSA ago-dic 08}
+  howpublished   = {ITSA ago-dic 08}
 }
 
 @unpublished{Martinez2008_Lenguaje_ensamblador,
@@ -579,7 +579,7 @@
   author    = {Martinez, Luis},
   year      = {2008},
   month     = {dec},
-  comment   = {ITSA ago-dic 08}
+  howpublished   = {ITSA ago-dic 08}
 }
 
 @unpublished{Martinez2008_Inteligencia_artificial,
@@ -587,7 +587,7 @@
   author    = {Martinez, Luis},
   year      = {2008},
   month     = {jun},
-  comment   = {ITSA ene-jun 08}
+  howpublished   = {ITSA ene-jun 08}
 }
 
 @unpublished{Martinez2008_Interfases,
@@ -595,7 +595,7 @@
   author    = {Martinez, Luis},
   year      = {2008},
   month     = {jun},
-  comment   = {ITSA ene-jun 08}
+  howpublished   = {ITSA ene-jun 08}
 }
 
 @unpublished{Martinez2007_Graficacion_computadora,
@@ -603,7 +603,7 @@
   author    = {Martinez, Luis},
   year      = {2007},
   month     = {dec},
-  comment   = {ITSA ago-dic 07}
+  howpublished   = {ITSA ago-dic 07}
 }
 
 @unpublished{Martinez2007_Lenguaje_ensamblador,
@@ -611,7 +611,7 @@
   author    = {Martinez, Luis},
   year      = {2007},
   month     = {dec},
-  comment   = {ITSA ago-dic 07}
+  howpublished   = {ITSA ago-dic 07}
 }
 
 @unpublished{Martinez2007_Interfases,
@@ -619,7 +619,7 @@
   author    = {Martinez, Luis},
   year      = {2007},
   month     = {jun},
-  comment   = {ITSA ene-jun 07}
+  howpublished   = {ITSA ene-jun 07}
 }
 
 @unpublished{Martinez2006_Arquitecturas_avanzadas_computadoras,
@@ -627,7 +627,7 @@
   author    = {Martinez, Luis},
   year      = {2006},
   month     = {dec},
-  comment   = {UPP sep-dic 06}
+  howpublished   = {UPP sep-dic 06}
 }
 
 @unpublished{Martinez2006_Herramientas_ofimaticas,
@@ -635,7 +635,7 @@
   author    = {Martinez, Luis},
   year      = {2006},
   month     = {dec},
-  comment   = {UPP sep-dic 06}
+  howpublished   = {UPP sep-dic 06}
 }
 
 @unpublished{Martinez2006_Lenguaje_ensamblador,
@@ -643,7 +643,7 @@
   author    = {Martinez, Luis},
   year      = {2006},
   month     = {dec},
-  comment   = {ITSA ago-dic 06}
+  howpublished   = {ITSA ago-dic 06}
 }
 
 @unpublished{Martinez2006_Programacion_sistemas,
@@ -651,7 +651,7 @@
   author    = {Martinez, Luis},
   year      = {2006},
   month     = {aug},
-  comment   = {ITSA jul-ago 06}
+  howpublished   = {ITSA jul-ago 06}
 }
 
 @unpublished{Martinez2006_Arquitectura_computadoras_II,
@@ -659,7 +659,7 @@
   author    = {Martinez, Luis},
   year      = {2006},
   month     = {jun},
-  comment   = {ITSA ene-jun 06}
+  howpublished   = {ITSA ene-jun 06}
 }
 
 @unpublished{Martinez2006_Arquitectura_computadoras_I,
@@ -667,7 +667,7 @@
   author    = {Martinez, Luis},
   year      = {2006},
   month     = {jun},
-  comment   = {ITSA ene-jun 06}
+  howpublished   = {ITSA ene-jun 06}
 }
 
 @unpublished{Martinez2005_Arquitectura_computadoras_II,
@@ -675,7 +675,7 @@
   author    = {Martinez, Luis},
   year      = {2005},
   month     = {dec},
-  comment   = {ITSA ago-dic 05}
+  howpublished   = {ITSA ago-dic 05}
 }
 
 @unpublished{Martinez2005_Sistemas_digitales,
@@ -683,7 +683,7 @@
   author    = {Martinez, Luis},
   year      = {2005},
   month     = {dec},
-  comment   = {ITSA ago-dic 05}
+  howpublished   = {ITSA ago-dic 05}
 }
 
 @unpublished{Martinez2005_Seminario_sistemas_digitales,
@@ -691,7 +691,7 @@
   author    = {Martinez, Luis},
   year      = {2005},
   month     = {aug},
-  comment   = {ITSA jul-ago 05}
+  howpublished   = {ITSA jul-ago 05}
 }
 
 @unpublished{Martinez2005_Programacion_sistemas,
@@ -699,5 +699,5 @@
   author    = {Martinez, Luis},
   year      = {2005},
   month     = {jun},
-  comment   = {ITSA ene-jun 05}
+  howpublished   = {ITSA ene-jun 05}
 }
